@@ -70,10 +70,9 @@ module Fairy
       end
     end
 
-    def terminate(mon)
+    def terminate
       
-      @wait_cv = mon.new_cv
-
+      @wait_cv = @terminate_mon.new_cv
       wait_export_finish
       super
     end
